<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/light_grey"
        tools:context=".ui.auth.RegisterFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.auth.RegisterFragment">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar_auth"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/avatar_img"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:scaleType="fitXY"
                android:src="@drawable/holder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                app:shapeAppearanceOverlay="@style/Circular" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/change_img"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="@+id/avatar_img"
                app:layout_constraintEnd_toEndOf="@+id/avatar_img"
                app:layout_constraintTop_toBottomOf="@+id/avatar_img"
                app:shapeAppearanceOverlay="@style/Circular"
                app:srcCompat="@drawable/cam" />

            <TextView
                android:id="@+id/choose_avatar_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_black"
                android:text="choose your avatar"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="@+id/avatar_img"
                app:layout_constraintStart_toStartOf="@+id/avatar_img"
                app:layout_constraintTop_toBottomOf="@+id/change_img" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:hint="@string/phone"
                app:boxCornerRadiusBottomStart="@dimen/_20sdp"
                app:boxCornerRadiusTopEnd="@dimen/_20sdp"
                app:counterEnabled="true"
                app:counterMaxLength="9"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:errorIconDrawable="@android:drawable/stat_notify_error"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/choose_avatar_tv"
                app:prefixText="01"
                app:prefixTextColor="@color/teal_200"
                app:startIconDrawable="@android:drawable/stat_sys_phone_call_on_hold">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="9"
                    android:textColor="@color/teal_200" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:hint="@string/password"
                app:boxCornerRadiusBottomStart="@dimen/_20sdp"
                app:boxCornerRadiusTopEnd="@dimen/_20sdp"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone_input_layout"
                app:startIconDrawable="@drawable/ic_baseline_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/teal_200" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_password_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:hint="@string/password_confirmation"
                app:boxCornerRadiusBottomStart="@dimen/_20sdp"
                app:boxCornerRadiusTopEnd="@dimen/_20sdp"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_input_layout"
                app:startIconDrawable="@drawable/ic_baseline_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/teal_200" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/register_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_36sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@drawable/custom_small_curved_btn_"
                android:enabled="false"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/confirm_password_input_layout" />

            <TextView
                android:id="@+id/sign_in_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_36sdp"
                android:layout_marginBottom="@dimen/_24sdp"
                android:fontFamily="@font/cairo_black"
                android:gravity="center_vertical"
                android:text="@string/sign_in_underline"
                android:textColor="@color/teal_700"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/register_btn" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_3sdp"
                android:text="@string/do_you_have_an_account"
                app:layout_constraintBottom_toBottomOf="@+id/sign_in_tv"
                app:layout_constraintEnd_toStartOf="@id/sign_in_tv"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/sign_in_tv" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>